--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -12,6 +12,7 @@ figure.highlight {
   font-size: $type-size-6;
   line-height: 1.8;
   border-radius: $border-radius;
+  border: 1px solid #d0d7de;  // hvppyarchive: changed border color for better visibility
 
   [dir=rtl] & {
     direction: ltr;
